[package]
name = "pty"
version = "0.2.0"
authors = ["Hika Hibariya <hibariya@gmail.com>"]
repository = "https://github.com/hibariya/pty-rs"
homepage = "https://github.com/hibariya/pty-rs"
license = "MIT"
description = "Fork with new pseudo-terminal (PTY)"
keywords = ["pty", "tty", "pseudo", "terminal", "fork"]

[[bin]]
name          = "example"
path          = "src/main.rs"
doc           = false

[lib]
name          = "pty"
path          = "src/lib.rs"
plugin        = true
crate-type    = ["dylib"]

[features]
default       = []
lints         = ["clippy", "nightly"]
nightly       = [] # for building with nightly and unstable features
unstable      = [] # for building with unstable features on stable Rust
debug         = [] # for building with debug messages
travis        = ["lints", "nightly"] # for building with travis-cargo

[dependencies.errno]
version       = "*"

[dependencies.libc]
version       = "*"

[dependencies.clippy]
version       = "*"
optional      = true
