[package]
name = "pty"
version = "0.2.2"
authors = ["Hika Hibariya <hibariya@gmail.com>"]
repository = "https://github.com/hibariya/pty-rs"
homepage = "https://github.com/hibariya/pty-rs"
license = "MIT"
description = "Fork with new pseudo-terminal (PTY)"
keywords = ["pty", "tty", "pseudo", "terminal", "fork"]

[dependencies]
errno = "0.1"
libc = "0.2.18"
